--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                     <p class="main-text">Акции и предложения</p>
                     <p><img src="./im/пасха.jpg" alt="Пасхальные предложения!" class="logo"></p>
                     <p class="main-text">Пасхальные предложения!</p>
-                    <button class="button glow-on-hoverr" onclick="openCategory('index')">Перейти</button>
+                    <button class="button glow-on-hoverr" onclick="window.location.href='https://kitpolosa.github.io/'">Перейти</button>
                     <p><img src="./im/свинина.jpg" alt="Свинина" class="logo"></p>
                     <p class="main-text">Скидки на свинину до 30%!</p>
-                    <button class="button glow-on-hoverr" onclick="openCategory('index')">Перейти</button>
+                    <button class="button glow-on-hoverr" onclick="window.location.href='https://kitpolosa.github.io/'">Перейти</button>
                 </nav>
                 </div>
             </div>
@@ -30,11 +30,5 @@
 
         <button class="back-to-top hidden" title="Вернуться наверх">	&#9650;</button>
     </section>
-
-<script>
-    function openCategory(category) {
-        window.location.href = category + ".html"; // Переходим на страницу категории
-}
-</script>
 </body>
 </html>
